Entrega06(comum):Visualização de lista de livros

--- a/bookCheck/nbproject/project.properties
+++ b/bookCheck/nbproject/project.properties
@@ -36,13 +36,17 @@ dist.jlink.output=${dist.jlink.dir}/bookCheck
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\Gabriel\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\gabriel.miranda\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.rs2xml.jar=C:\\Users\\Gabriel\\Downloads\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\gabriel.miranda\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.rs2xml.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
